# geonature_quadrige_extraction

./: .gitignore  Dockerfile_standart_env_ouvert_sans_proxy  INSTALL.md  README.md  brouillon.py  build.sh  mdp git.txt  package-lock.json  package.json  pyproject.toml  requirement.txt  requirement_backend.txt  requirements_backend.txt  setup.sh  setupt.sh  verify_patch.sh
backend/: app_backend.py  backend.py  build_query.py  extractProgm_p.py  extraction_data.py  extraction_programs.py  list_programs.py  pytest.ini
backend/geonature/tests/: conftest.py  fixtures.py  test_backend_errors.py  test_backend_routes.py  test_backend_utils.py  test_environment.py  test_routes_backend.py
backend/geonature_quadrige_extraction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/memory/: last_filter.json  programmes_048-_filtered.csv  programmes_050_filtered.csv  programmes_126-_brut.csv  programmes_126-_filtered.csv  programmes_145-_filtered.csv  programmes_152-_brut.csv  programmes_152-_filtered.csv  programmes_153-_brut.csv  programmes_153-_filtered.csv  programmes_156-_brut.csv  programmes_156-_filtered.csv
backend/tests/: test_connexion.py
frontend/: angular.json  cypress.config.ts  package-lock.json  package.json
frontend/cypress/: programmes-extraction-spec.js  programmes-filters-spec.js  programmes-spec.js
frontend/cypress/e2e/: datas_filter-basic-spec.js  programmes-basic-spec.js  programmes-datas-filter-basic-spec.js  programmes_filter-basic-spec.js
frontend/src/: styles.scss
src/: index.html  main.ts
src/app/: app.html  app.ts
(+39 files in other folders)
